--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Urbana</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="clear"
+            />
+            13°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        Open source code on
+        <a
+          href="https://github.com/MarahDeven/weather-app-sandbox"
+          target="_blank"
+          >Github</a
+        >
+        by Marah Rice, hosted on
+        <a href="https://www.netlify.com" target="_blank">Netlify</a>
+      </small>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
