--- a/index.html
+++ b/index.html
@@ -16,29 +16,36 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Urbana</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="clear"
-            />
-            13°C | °F
-          </div>
-          <div class="col-6">
+      <div class="weather-app-wrap">
+        <div class="weather-app">
+          <div class="preview">
+            <h1>Urbana</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 2 km/h</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temp">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="clear"
+                  class="float-left"
+                />
+                <strong>53</strong
+                ><span class="units">°F | <a href="#">°C</a></span>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
-
         <small>
           Open source code on
           <a
