--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -19,10 +20,10 @@
       <div class="weather-app-wrap">
         <div class="weather-app">
           <div class="preview">
-            <h1>Urbana</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Friday 05:00</li>
-              <li>Clear</li>
+              <li id="conditions"></li>
             </ul>
           </div>
           <div class="row">
@@ -33,15 +34,14 @@
                   alt="clear"
                   class="float-left"
                 />
-                <strong>53</strong
-                ><span class="units">°F | <a href="#">°C</a></span>
+                <strong id="temperature"></strong>
+                <span class="units">°F | <a href="#">°C</a></span>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 73%</li>
-                <li>Wind: 2 km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>mph</li>
               </ul>
             </div>
           </div>
@@ -58,6 +58,6 @@
         </small>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
