--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="preview">
             <h1 id="city"></h1>
             <ul>
-              <li>Friday 05:00</li>
+              <li id="date"></li>
               <li id="conditions"></li>
             </ul>
           </div>
