--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
               <div class="clearfix weather-temp">
                 <img src="" alt="clear" id="icon" class="float-left" />
                 <strong id="temperature"></strong>
-                <span class="units">°F | <a href="#">°C</a></span>
+                <span class="units"
+                  ><a href="#" id="fahrenheit" class="active">°F</a> |
+                  <a href="#" id="celsius">°C</a></span
+                >
               </div>
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
