Started adding future forecast

--- a/index.html
+++ b/index.html
@@ -75,17 +75,39 @@
               </div>
             </div>
           </div>
+          <div class="five-day-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weekdays"><b>Mon</b></div>
+                <img
+                  src="http://openweathermap.org/img/wn/04n@2x.png"
+                  alt="cloudy"
+                  width="40px"
+                />
+                <div class="five-day-forecast-temp">
+                  <span class="five-day-forecast-max">38</span>°F |
+                  <span class="five-day-forecast-min">21</span>°F
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <small>
-          Open source code on
-          <a
-            href="https://github.com/MarahDeven/weather-app-sandbox"
-            target="_blank"
-            >Github</a
-          >
-          by Marah Rice, hosted on
-          <a href="https://www.netlify.com" target="_blank">Netlify</a>
-        </small>
+        <small
+          ><b>
+            Open source code on
+            <a
+              href="https://github.com/MarahDeven/weather-app-now"
+              target="_blank"
+              >Github</a
+            >
+            by Marah Rice, hosted on
+            <a
+              href="https://vibrant-dubinsky-ed4e0b.netlify.app"
+              target="_blank"
+              >Netlify</a
+            >
+          </b></small
+        >
       </div>
     </div>
     <script src="src/app.js"></script>
