Injected forecast HTML into JS to clean up code and make it more readable

--- a/index.html
+++ b/index.html
@@ -75,22 +75,7 @@
               </div>
             </div>
           </div>
-          <div class="five-day-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weekdays"><b>Mon</b></div>
-                <img
-                  src="http://openweathermap.org/img/wn/04n@2x.png"
-                  alt="cloudy"
-                  width="40px"
-                />
-                <div class="five-day-forecast-temp">
-                  <span class="five-day-forecast-max">38</span>°F |
-                  <span class="five-day-forecast-min">21</span>°F
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="five-day-forecast" id="forecast"></div>
         </div>
         <small
           ><b>
