Added daily forecast api

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                   ><a href="#" id="fahrenheit" class="active">°F</a> |
                   <a href="#" id="celsius">°C</a></span
                 >
+                <div>Feels like:<span id="feels-like"></span></div>
               </div>
               <ul>
                 <li>
